profertility-plus/service.yml
apiVersion: v1
kind: Service
metadata:
  name: profertility-plus
  namespace: profertility
spec:
  selector:
    app: profertility-plus
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3000
