profertility-plus/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plus-api-route
  namespace: profertility
spec:
  parentRefs:
    - name: profertility-gateway
  hostnames:
    - "plus.mojasim.tech"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: profertility-plus
          port: 3001
